--- a/src/main/resources/templates/indexThymeleaf.html
+++ b/src/main/resources/templates/indexThymeleaf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>hello</title>
+<head lang="en">
+    <title>Thymeleaf模板</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
